Fix: - revue de la navbar - bouton télécharger cv - texte about en version mobile

--- a/app/components/About/About.module.scss
+++ b/app/components/About/About.module.scss
@@ -58,7 +58,7 @@
       }
 
       @media screen and (max-width: var.$breakpoint-mobile) {
-        text-align: center;
+        // text-align: center;
         font-size: var(--about--presentation--fontSize--mobile);
       }
     }
