--- a/app/components/Navbar/NavBar.module.scss
+++ b/app/components/Navbar/NavBar.module.scss
@@ -1,3 +1,4 @@
+@use "../../styles/utils/functions.scss" as fct;
 @use "../../styles/utils/variables.scss" as var;
 
 .container {
@@ -24,45 +25,51 @@
     align-items: self-start;
   }
 
-  .list {
+  .navbar {
     flex: 2;
     display: flex;
-    justify-content: center;
     opacity: 1;
+    justify-content: center;
 
     @media screen and (max-width: var.$breakpoint-tablette) {
-      flex: 10;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
       opacity: 0;
-      transition: opacity 0.8s 1s ease;
-      transform: translateY(8rem);
     }
 
-    &__item {
-      padding: 0 2rem;
-      font-size: var(--navbar--link--fontSize);
-      font-family: var(--fontFamily--archivo);
-      font-weight: var(--navbar--link--fontWeight);
-      color: var(--navbar--link--color);
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
+    .list {
+      opacity: 1;
+      display: flex;
 
       @media screen and (max-width: var.$breakpoint-tablette) {
-        padding: 0.5rem 0;
+        flex-direction: column;
+        align-items: start;
+        transition: opacity 0.8s 1s ease;
+        transform: translateY(7rem);
       }
 
-      &:before {
-        content: "\269D";
-        color: var(--navbar--stars--color);
-        text-shadow: 0.1rem 0.1rem 0.1rem var(--navbar--stars--textShadow);
-        margin-right: 1rem;
-        font-size: 1.9rem;
-      }
+      &__item {
+        padding: 0 2rem;
+        font-size: var(--navbar--link--fontSize);
+        font-family: var(--fontFamily--archivo);
+        font-weight: var(--navbar--link--fontWeight);
+        color: var(--navbar--link--color);
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
 
-      &:hover {
-        animation: wobble-horizontal 1s ease-in-out 1;
-        transform: perspective(0.1rem) translateZ(0);
+        @media screen and (max-width: var.$breakpoint-tablette) {
+          padding: 0.5rem 0;
+        }
+
+        &:before {
+          content: "\269D";
+          color: var(--navbar--stars--color);
+          text-shadow: 0.1rem 0.1rem 0.1rem var(--navbar--stars--textShadow);
+          margin-right: 1rem;
+          font-size: 1.9rem;
+        }
+
+        &:hover {
+          animation: wobble-horizontal 1s ease-in-out 1;
+          transform: perspective(0.1rem) translateZ(0);
+        }
       }
     }
   }
